--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "@types/node": "^12.7.4",
     "tslint": "^5.19.0",
     "typescript": "^3.6.2"
+  },
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org/"
   }
 }
